# EOQ-Laser-project

./: README.md  docker-compose.yml  mexican_standoff.py  selection.py  sequance.py  test.py
api/: Dockerfile  main.py  pyproject.toml
api/data/: __init__.py  gun.py  module.py  mqtt.py  unit.py
api/routers/: gun.py  module.py  system.py  unit.py
api/schemas/: battery.py  color.py  version.py  volume.py
example_colat/: colat_example.py  pyproject.toml
simulator/: Dockerfile  docker-entrypoint.sh  index.html  package-lock.json  package.json
simulator/src/: App.vue  style.css
simulator/src/components/: BaseCard.vue  BroadcastBar.vue  DevicePanel.vue  GunCard.vue  LogPanel.vue  ModuleCard.vue  RgbwInput.vue  TheHeader.vue
simulator/src/composables/: useGun.js  useGunBroadcast.js  useModule.js  useModuleBroadcast.js  useMqtt.js  useSystem.js
simulator/src/stores/: devices.js
simulator/src/utils/: color.js
wav/: test.py
